Rename files and make ouibounce self-executing fn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
   <body>
     <p>This is the sandbox, where we sell boxes of sand.</p>
-    <script src="sample.js"></script>
+    <script src="ouibounce.js"></script>
   </body>
 </html>
