--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="bootstrap_modal.css">
+
     <!-- save jQuery, code on a plane -->
     <script src="jquery.js"></script>
     <title>Carl's Sandbox</title>
@@ -9,8 +11,25 @@
 
   <body>
     <p>This is the sandbox, where we sell boxes of sand.</p>
-    <p>To install this bookmarklet, simply drag <a href='javascript:((function(){function o(e){if(r===false){console.log(e);alert(e);r=true}}var t=null,n=null,r=false,i=window.innerHeight,s=(new Date).getTime();scrolling=false;$("html").on("mousemove",function(e){if(e.pageY<n){t="up"}else{t=null}if(e.pageY<document.body.scrollTop+10&&t=="up"){o("passed top 10")}window.onscroll=function(e){scrolling=true};var r=(new Date).getTime(),u=r-s;distance=n-e.pageY;var a=distance/u;if(t=="up"&&a>i/125&&scrolling===false){o("mouse is moving fast "+a)}n=e.pageY;scrolling=false;s=r})})())();'>OuiBounce</a> to your bookmark bar.</p>
 
+    <!-- Modal -->
+    <div class="modal fade" id="ouibounce-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel">SPECIAL OFFER</h4>
+          </div>
+          <div class="modal-body">
+            Place your marketing message here!
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <script src="bootstrap_modal.js"></script>
     <script src="ouibounce.js"></script>
   </body>
 </html>
