--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="bootstrap_modal.css">
 
-    <!-- save jQuery, code on a plane -->
+    <!-- save jQuery locally, code on a plane -->
     <script src="jquery.js"></script>
     <title>Carl's Sandbox</title>
   </head>
@@ -12,24 +12,20 @@
   <body>
     <p>This is the sandbox, where we sell boxes of sand.</p>
 
-    <!-- Modal -->
+    <!-- OuiBounce Modal -->
     <div class="modal fade" id="ouibounce-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">SPECIAL OFFER</h4>
-          </div>
           <div class="modal-body">
             Place your marketing message here!
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal">No thanks</button>
           </div>
-        </div><!-- /.modal-content -->
-      </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+        </div>
+      </div>
+    </div>
 
-    <script src="bootstrap_modal.js"></script>
     <script src="ouibounce.js"></script>
   </body>
 </html>
