Update project structure

--- a/example/index.html
+++ b/example/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    <h1>Try leaving this page</h1>
     <p>This is the sandbox, where we sell boxes of sand.</p>
 
     <!-- OuiBounce Modal -->
