Adds minified js, combines css into js script

--- a/example/index.html
+++ b/example/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="bootstrap_modal.css">
-
-    <!-- save jQuery locally, code on a plane -->
-    <script src="jquery.js"></script>
     <title>Carl's Sandbox</title>
+
+    <link rel="stylesheet" href="main.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="ouibounce.min.js"></script>
+    
   </head>
 
   <body>
@@ -27,6 +27,5 @@
       </div>
     </div>
 
-    <script src="ouibounce.js"></script>
   </body>
 </html>
