--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,7 @@
     </div>
     
     <script>
-      $('#ouibounce-modal').ouibounce();
+      $('#ouibounce-modal').ouibounce({sensitivity: 40});
     </script>
   </body>
 </html>
