Update test files
- Change CSS color for background and body
- Remove sensitivity

--- a/test/index.html
+++ b/test/index.html
@@ -9,8 +9,7 @@
   </head>
 
   <body>
-    <h1>Try leaving this page</h1>
-    <p>This is the sandbox, where we sell boxes of sand.</p>
+    <h1>Try leaving this page to fire OuiBounce</h1>
 
     <!-- OuiBounce Modal -->
     <div id="ouibounce-modal">
@@ -18,7 +17,7 @@
     </div>
     
     <script>
-      $('#ouibounce-modal').ouibounce({sensitivity: 40});
+      $('#ouibounce-modal').ouibounce();
     </script>
   </body>
 </html>
