--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,7 @@
     </div>
     
     <script>
-      $('#ouibounce-modal').ouibounce();
+      $('#ouibounce-modal').ouibounce({aggressive: true});
     </script>
   </body>
 </html>
