--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,12 @@
     <!-- Example page JS        -->
     <!-- Used to fire the modal -->
     <script>
-      $('#ouibounce-modal').ouibounce({ aggressive: true, timer: 0, callback: function() { console.log('fired !'); } });
+      ouiBounce(document.getElementById('ouibounce-modal'), {
+        aggressive: true,
+        timer: 0,
+        callback: function() { console.log('ouiBounce fired!'); }
+      });
+
       $('body').on('click', function() {
         $('#ouibounce-modal').hide();
       });
