--- a/test/fixtures/aggressive.html
+++ b/test/fixtures/aggressive.html
@@ -10,9 +10,13 @@
     <script>
       // initialize a counter, to test aggressive mode
       window.ouiBounceCounter = 0;
+
+      // if the cookie was already dropped, set counter to 1
+      if (window.document.cookie === 'viewedOuibounceModal=true') window.ouiBounceCounter = 1;
       
       ouiBounce(document.getElementById('ouibounce-modal'), {
-        callback: function() { window.ouiBounceCounter++; }
+        callback: function() { window.ouiBounceCounter++; },
+        aggressive: true
       });
     </script>
   </body>
