--- a/test/index.html
+++ b/test/index.html
@@ -33,7 +33,7 @@
     <div id="ouibounce-modal">
       <div class="underlay"></div>
       <div class="modal">
-        <h3>This is the tile of your modal</h3>
+        <h3>This is a OuiBounce modal title</h3>
         <p>Place your marketing message here!</p>
       </div>
     </div>
