Update test modal styles

--- a/test/index.html
+++ b/test/index.html
@@ -40,8 +40,8 @@
         </div>
 
         <div class="modal-body">
-          <p>A doge is an elected chief of state lordship, the ruler of the Republic in many of the Italian city states during the medieval and renaissance periods, in the Italian "crowned republics".<a href="https://en.wikipedia.org/wiki/Doge" target="blank">[1]</a></p>
-          <p>The word is from a Venetian word that descends from the Latin dux (as do the English duke and the standard Italian duce and duca), meaning "leader", especially in a military context. The wife of a doge is styled a dogaressa.</p>
+          <p>A doge is an elected chief of state lordship, the ruler of the Republic in many of the Italian city states during the medieval and renaissance periods, in the Italian "crowned republics".</p>
+          <p>The word is from a Venetian word that descends from the Latin dux (as do the English duke and the standard Italian duce and duca), meaning "leader", especially in a military context. The wife of a doge is styled a dogaressa. <a href="https://en.wikipedia.org/wiki/Doge" target="blank">[1]</a></p>
 
           <form>
             <input type="text" placeholder="you@email.com">
@@ -69,7 +69,7 @@
         $('#ouibounce-modal').hide();
       });
 
-      $('.no-thanks').on('click', function() {
+      $('#ouibounce-modal .modal-footer').on('click', function() {
         $('#ouibounce-modal').hide();
       });
 
