--- a/test/index.html
+++ b/test/index.html
@@ -36,7 +36,7 @@
       <div class="underlay"></div>
       <div class="modal">
         <div class="modal-title">
-          <h3>This is a OuiBounce modal title!</h3>
+          <h3>This is a OuiBounce modal!</h3>
         </div>
 
         <div class="modal-body">
