Nice refactor, close #11
- Add public functions to fire and disable OuiBounce on demand
- Refactor code to use newly available functions
- Add comments to checkCookie fn

--- a/test/index.html
+++ b/test/index.html
@@ -59,7 +59,10 @@
     <!-- Example page JS        -->
     <!-- Used to fire the modal -->
     <script>
-      ouiBounce(document.getElementById('ouibounce-modal'), {
+
+      // if you want to use the 'fire' or 'disable' fn,
+      // you need to save OuiBounce to an object
+      var _ouiBounce = ouiBounce(document.getElementById('ouibounce-modal'), {
         aggressive: true,
         timer: 0,
         callback: function() { console.log('ouiBounce fired!'); }
