--- a/test/index.html
+++ b/test/index.html
@@ -24,7 +24,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
     <!-- Add OuiBounce JS -->
-    <script src="../build/ouibounce.js"></script>
+    <script src="../source/ouibounce.js"></script>
   </head>
 
   <body>
