--- a/test/fixtures/basic.html
+++ b/test/fixtures/basic.html
@@ -9,10 +9,10 @@
 
     <script>
       // initialize a counter, to test aggressive mode
-      window.ouiBounceCounter = 0;
+      window.ouibounceCounter = 0;
       
-      ouiBounce(document.getElementById('ouibounce-modal'), {
-        callback: function() { window.ouiBounceCounter++; }
+      ouibounce(document.getElementById('ouibounce-modal'), {
+        callback: function() { window.ouibounceCounter++; }
       });
     </script>
   </body>
