--- a/test/index.html
+++ b/test/index.html
@@ -62,10 +62,10 @@
 
       // if you want to use the 'fire' or 'disable' fn,
       // you need to save OuiBounce to an object
-      var _ouiBounce = ouiBounce(document.getElementById('ouibounce-modal'), {
+      var _ouibounce = ouibounce(document.getElementById('ouibounce-modal'), {
         aggressive: true,
         timer: 0,
-        callback: function() { console.log('ouiBounce fired!'); }
+        callback: function() { console.log('ouibounce fired!'); }
       });
 
       $('body').on('click', function() {
