--- a/test/sitewide-cookies.html
+++ b/test/sitewide-cookies.html
@@ -62,7 +62,7 @@
 
       // if you want to use the 'fire' or 'disable' fn,
       // you need to save OuiBounce to an object
-      var _ouiBounce = ouiBounce(document.getElementById('ouibounce-modal'), {
+      var _ouiBounce = ouibounce(document.getElementById('ouibounce-modal'), {
         cookieExpire: 10,
         timer: 0,
         callback: function() { console.log('ouiBounce fired!'); }
