--- a/test/fixtures/no-element.html
+++ b/test/fixtures/no-element.html
@@ -9,7 +9,7 @@
 
     <script>
       ouibounce(false, {
-        callback: function() { console.log('callback fired'); }
+        onLeave: function() { console.log('onLeave fired'); }
       });
     </script>
   </body>
