--- a/test/index.html
+++ b/test/index.html
@@ -65,7 +65,8 @@
       var _ouibounce = ouibounce(document.getElementById('ouibounce-modal'), {
         aggressive: true,
         timer: 0,
-        callback: function() { console.log('ouibounce fired!'); }
+        onLeave: function() { console.log('ouibounce fired!'); },
+        onReEnter: function() { console.log('user came back!'); }
       });
 
       $('body').on('click', function() {
