Fired when scrolling up rapidly to the top of the page

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
       body {
         background-color: #F0F1F2;
         color: #2E4052;
-        min-height: 500px;
+        min-height: 200vh;
         padding: 0;
         -webkit-font-smoothing: antialiased;
         font-family: sans-serif;
